k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wanderlust
  labels:
    name: wanderlust
    app.kubernetes.io/name: wanderlust
