k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wanderlust-service
  namespace: wanderlust
  labels:
    app.kubernetes.io/name: wanderlust
spec:
  type: NodePort
  selector:
    app: wanderlust
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30080
      name: http
